--- a/My Skills/index.html
+++ b/My Skills/index.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <div class= "nav"> 
-                <img src="../My Skills/images/Logo Export.svg">
+                <img src="../My Skills/images/Logo.png">
             </div>
             <nav class="inline-block">
                 <ul>
